video metafield for tech spec

--- a/sections/product-content-fold.liquid
+++ b/sections/product-content-fold.liquid
@@ -90,8 +90,23 @@
                   </button>
                   <div class="product-content-fold-answer">
                     {% if metaobject.file.value %}
-                      <img class="product-content-fold-answer-image" src="{{ metaobject.file.value |  image_url }}">
+                      {% assign file_extension = metaobject.file.value | split: '.' | last | downcase %}
+
+                      {% if file_extension == 'jpg'
+                        or file_extension == 'jpeg'
+                        or file_extension == 'png'
+                        or file_extension == 'gif'
+                        or file_extension == 'webp'
+                      %}
+                        <img class="product-content-fold-answer-image" src="{{ metaobject.file.value | image_url }}">
+                      {% elsif metaobject.file.value.media_type == 'video' %}
+                        {{
+                          metaobject.file.value
+                          | video_tag: autoplay: true, loop: true, muted: true, controls: true, image_size: '600x'
+                        }}
+                      {% endif %}
                     {% endif %}
+
                     <p>{{ metaobject.description | metafield_tag }}</p>
                   </div>
                 </div>
@@ -237,7 +252,9 @@
     border-radius: 15px;
     height: 100%;
   }
-
+  .product-content-fold-answer video {
+    height: auto !important;
+  }
   .product-content-fold-question span {
     font-family: 'Kanit', sans-serif;
     font-size: 1.8rem;
