--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -115,16 +115,16 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
   padding: 1.5rem 0;
 }
 
-cart-drawer-items.is-empty + .drawer__footer {
+cart-drawer-items.is-empty+.drawer__footer {
   display: none;
 }
 
-.drawer__footer > details {
+.drawer__footer>details {
   margin-top: -1.5rem;
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.2);
 }
 
-.drawer__footer > details[open] {
+.drawer__footer>details[open] {
   padding-bottom: 1.5rem;
 }
 
@@ -135,7 +135,7 @@ cart-drawer-items.is-empty + .drawer__footer {
   padding: 1.5rem 2.8rem 1.5rem 0;
 }
 
-.drawer__footer > details + .cart-drawer__footer {
+.drawer__footer>details+.cart-drawer__footer {
   padding-top: 1.5rem;
 }
 
@@ -173,10 +173,16 @@ cart-drawer {
   flex-grow: 1;
 }
 
-.cart-drawer .cart-items,
-.cart-drawer tbody {
+.cart-drawer .cart-items {
   display: block;
   width: 100%;
+}
+
+.cart-drawer tbody {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .cart-drawer thead {
@@ -200,10 +206,14 @@ cart-drawer-items {
 }
 
 .cart-drawer .cart-item {
-  display: grid;
-  grid-template: repeat(2, auto) / repeat(4, 1fr);
+  display: flex;
+  align-items: center;
+  /* grid-template: repeat(2, auto) / repeat(3, 1fr); */
   gap: 1rem;
   margin-bottom: 0;
+  padding: 10px;
+  border: solid 1px #00000020;
+  border-radius: 10px;
 }
 
 .cart-drawer .cart-item:last-child {
@@ -211,7 +221,10 @@ cart-drawer-items {
 }
 
 .cart-drawer .cart-item__media {
-  grid-row: 1 / 3;
+  /* grid-row: 1 / 3; */
+  width: 25%;
+  height: fit-content;
+  display: flex;
 }
 
 .cart-drawer .cart-item__image {
@@ -251,17 +264,18 @@ cart-drawer-items {
   padding-top: 2.5rem;
 }
 
-.cart-drawer .cart-items td {
+/* .cart-drawer .cart-items td {
   padding-top: 1.7rem;
-}
+} */
 
-.cart-drawer .cart-item > td + td {
+/* .cart-drawer .cart-item>td+td {
   padding-left: 1rem;
-}
+} */
 
 .cart-drawer .cart-item__details {
-  width: auto;
-  grid-column: 2 / 4;
+  width: 50%;
+  grid-column: 2 / 3;
+  height: fit-content;
 }
 
 .cart-drawer .cart-item__totals {
@@ -271,7 +285,7 @@ cart-drawer-items {
   justify-content: flex-end;
 }
 
-.cart-drawer.cart-drawer .cart-item__price-wrapper > *:only-child {
+.cart-drawer.cart-drawer .cart-item__price-wrapper>*:only-child {
   margin-top: 0;
 }
 
@@ -287,7 +301,49 @@ cart-drawer-items {
 
 .cart-drawer .cart-items .cart-item__quantity {
   padding-top: 0;
-  grid-column: 2 / 5;
+  grid-column: 3 / 5;
+  padding-left: 0 !important;
+  width: 30%;
+}
+
+.cart-drawer .cart-item__image {
+  border-radius: 10px;
+}
+
+.cart-drawer cart-remove-button .button {
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  min-height: 20px;
+  width: auto;
+  display: flex;
+  justify-content: end;
+}
+
+.cart-drawer quantity-popover .quantity__button:not(:focus-visible):not(.focused),
+quantity-popover .quantity__input:not(:focus-visible):not(.focused),
+.cart-drawer quantity-popover .quantity {
+  height: 30px;
+  min-height: 30px;
+}
+
+.cart-drawer .quantity__input {
+  width: 20px;
+  padding: 0;
+}
+
+.cart-drawer .quantity__button {
+  width: 30px;
+  border: solid 1px #eabe39;
+  border-radius: 6px;
+}
+
+.cart-drawer .quantity:after {
+  display: none;
+}
+
+.cart-drawer .quantity-popover-container:not(.quantity-popover-container--hover) {
+  width: 100%;
 }
 
 @media screen and (max-width: 749px) {
@@ -296,7 +352,7 @@ cart-drawer-items {
   }
 }
 
-.cart-drawer__footer > * + * {
+.cart-drawer__footer>*+* {
   margin-top: 1rem;
 }
 
@@ -317,7 +373,7 @@ cart-drawer-items {
   word-break: break-word;
 }
 
-.cart-drawer details[open] > summary .icon-caret {
+.cart-drawer details[open]>summary .icon-caret {
   transform: rotate(180deg);
 }
 
@@ -340,26 +396,26 @@ cart-drawer-items {
   justify-content: flex-start;
 }
 
-.drawer__footer #dynamic-checkout-cart ul > li {
+.drawer__footer #dynamic-checkout-cart ul>li {
   flex-basis: calc(50% - 0.5rem) !important;
   margin: 0 !important;
 }
 
-.drawer__footer #dynamic-checkout-cart ul > li:only-child {
+.drawer__footer #dynamic-checkout-cart ul>li:only-child {
   flex-basis: 100% !important;
   margin-right: 0.5rem !important;
 }
 
 @media screen and (min-width: 750px) {
-  .drawer__footer #dynamic-checkout-cart ul > li {
+  .drawer__footer #dynamic-checkout-cart ul>li {
     flex-basis: calc(100% / 3 - 0.5rem) !important;
     margin: 0 !important;
   }
 
-  .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(2),
-  .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(2) ~ li,
-  .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(4),
-  .drawer__footer #dynamic-checkout-cart ul > li:first-child:nth-last-child(4) ~ li {
+  .drawer__footer #dynamic-checkout-cart ul>li:first-child:nth-last-child(2),
+  .drawer__footer #dynamic-checkout-cart ul>li:first-child:nth-last-child(2)~li,
+  .drawer__footer #dynamic-checkout-cart ul>li:first-child:nth-last-child(4),
+  .drawer__footer #dynamic-checkout-cart ul>li:first-child:nth-last-child(4)~li {
     flex-basis: calc(50% - 0.5rem) !important;
   }
 }
@@ -386,16 +442,16 @@ cart-drawer-items::-webkit-scrollbar-track-piece {
   top: 100%;
 }
 
-.cart-drawer .cart-item__error {
+/* .cart-drawer .cart-item__error {
   margin-top: 0.8rem;
-}
+} */
 
-.cart-drawer .quantity-popover__info + .cart-item__error {
+.cart-drawer .quantity-popover__info+.cart-item__error {
   margin-top: 0.2rem;
 }
 
 @media screen and (min-width: 750px) {
-  .cart-drawer .cart-item__quantity--info quantity-popover > * {
+  .cart-drawer .cart-item__quantity--info quantity-popover>* {
     padding-left: 0;
   }
 
