--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -17,6 +17,9 @@ cart-items .title-wrapper-with-link {
 
 .cart-item__quantity-wrapper {
   display: flex;
+  flex-direction: column-reverse;
+  align-items: end;
+  gap: 10px;
 }
 
 .cart-item__totals {
@@ -52,13 +55,13 @@ cart-items .title-wrapper-with-link {
   line-height: calc(1 + 0.4 / var(--font-body-scale));
 }
 
-.cart-item__details > * {
+.cart-item__details>* {
   margin: 0;
   max-width: 30rem;
 }
 
-.cart-item__details > * + * {
-  margin-top: 0.6rem;
+.cart-item__details>*+* {
+  margin-top: 0.2rem;
 }
 
 .cart-item__media {
@@ -87,7 +90,7 @@ cart-items .title-wrapper-with-link {
   text-decoration-thickness: 0.2rem;
 }
 
-.cart-item__price-wrapper > * {
+.cart-item__price-wrapper>* {
   display: block;
   margin: 0;
   padding: 0;
@@ -171,7 +174,7 @@ cart-remove-button .icon-remove {
   }
 }
 
-.cart-item .loading__spinner:not(.hidden) ~ * {
+.cart-item .loading__spinner:not(.hidden)~* {
   visibility: hidden;
 }
 
@@ -190,7 +193,7 @@ cart-remove-button .icon-remove {
   order: 1;
 }
 
-.cart-item__error-text + .svg-wrapper {
+.cart-item__error-text+.svg-wrapper {
   flex-shrink: 0;
   width: 1.5rem;
   height: 1.5rem;
@@ -198,11 +201,11 @@ cart-remove-button .icon-remove {
   margin-top: 0.25rem;
 }
 
-.cart-item__error-text:empty + .svg-wrapper {
+.cart-item__error-text:empty+.svg-wrapper {
   display: none;
 }
 
-.product-option + .product-option {
+.product-option+.product-option {
   margin-top: 0.4rem;
 }
 
@@ -216,6 +219,7 @@ cart-remove-button .icon-remove {
 }
 
 @media screen and (max-width: 749px) {
+
   .cart-items,
   .cart-items thead,
   .cart-items tbody {
@@ -281,22 +285,22 @@ cart-remove-button .icon-remove {
     width: 50%;
   }
 
-  .cart-items th + th {
+  .cart-items th+th {
     padding-left: 4rem;
   }
 
   .cart-items td {
     vertical-align: top;
-    padding-top: 4rem;
+    /* padding-top: 4rem; */
   }
 
   .cart-item {
     display: table-row;
   }
 
-  .cart-item > td + td {
+  /* .cart-item>td+td {
     padding-left: 4rem;
-  }
+  } */
 
   .cart-item__details {
     width: 35rem;
@@ -306,7 +310,7 @@ cart-remove-button .icon-remove {
     width: 10rem;
   }
 
-  .cart-item__price-wrapper > *:only-child:not(.cart-item__discounted-prices) {
+  .cart-item__price-wrapper>*:only-child:not(.cart-item__discounted-prices) {
     margin-top: 1rem;
   }
 
@@ -316,6 +320,7 @@ cart-remove-button .icon-remove {
 }
 
 @media screen and (min-width: 990px) {
+
   .cart-item .cart-item__quantity,
   .cart-items .cart-items__heading--wide {
     padding-left: 6rem;
@@ -331,9 +336,10 @@ cart-remove-button .icon-remove {
 }
 
 @media screen and (min-width: 750px) {
+
   .cart-items .cart-items__heading--quantity,
   .cart-item .cart-item__quantity,
-  .cart-item__quantity--info quantity-popover > * {
+  .cart-item__quantity--info quantity-popover>* {
     padding-left: 5rem;
   }
 
