--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -171,6 +171,8 @@ cart-drawer {
 
 .cart-drawer .drawer__cart-items-wrapper {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .cart-drawer .cart-items {
@@ -224,6 +226,7 @@ cart-drawer-items {
   /* grid-row: 1 / 3; */
   width: 25%;
   height: fit-content;
+  aspect-ratio: 1/1;
   display: flex;
 }
 
@@ -255,9 +258,9 @@ cart-drawer-items {
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
 }
 
-.cart-drawer .cart-item:last-child {
+/* .cart-drawer .cart-item:last-child {
   margin-bottom: 1.5rem;
-}
+} */
 
 .cart-drawer .cart-item .loading__spinner {
   right: 5px;
