minor web changes

--- a/sections/content-slider-strip.liquid
+++ b/sections/content-slider-strip.liquid
@@ -14,7 +14,7 @@
     overflow: hidden;
     white-space: nowrap;
     position: relative;
-    background: linear-gradient(90deg, rgba(103, 0, 192, 1), rgba(1, 0, 1, 1) 100%);
+    background: #eabe39;
   }
 
   .content-slider-strip {
@@ -27,11 +27,11 @@
     display: inline-block;
     padding: 0 1rem;
     white-space: nowrap;
-    color: white;
+    color: #5500a9;
   }
 
   .bullet-dot {
-    color: #ffb800;
+    color: #5500a9;
     font-weight: 800;
     font-size: 3rem;
     line-height: 5px;
