--- a/sections/sticky-add_to_cart.liquid
+++ b/sections/sticky-add_to_cart.liquid
@@ -18,7 +18,7 @@
 
     gsap.to(shine, {
       x: '200%',
-      duration: 1.5,
+      duration: 0.6,
       repeat: -1,
       ease: 'power2.inOut',
       delay: 1,
@@ -35,6 +35,7 @@
     font-family: 'Kanit';
     font-weight: 400;
     transition: 0.3s ease-in-out;
+    margin: 0;
   }
 
   .button-shine {
@@ -84,7 +85,7 @@
     background: linear-gradient(90deg, rgba(103, 0, 192, 1), rgba(1, 0, 1, 1) 100%);
     border: solid 1px #382d43;
     width: 100%;
-    padding: 15px 5rem;
+    padding: 5px 5rem;
     gap: 20px;
   }
   .sticky-atc-container .page-width .price--large {
@@ -116,7 +117,7 @@
     font-weight: 500;
     font-family: 'Kanit', sans-serif;
     letter-spacing: 0;
-    line-height: 2.5rem;
+    line-height: 1.7rem;
     margin: 0;
     color: #fff !important;
   }
