--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -77,7 +77,7 @@
       additional_props: input_dataset
     %}
   {%- elsif picker_type == 'button' -%}
-    {%- assign color_mapping = 'passionate plum:#cc8899,carmine:#ff0038,RUSIAN PINK:#ff007f,blue khalifa:#55e2e9,chocolate:#4b3530,blueberry:#6a8bba,raspberry:#ce444d,peach:#9a2924,baby pink:#ffc0cb,lime yellow:#dfff00,white:#fff,pale blue:#bbeaea,classic rose:#ce80bd,blue:#250084,red:#cf2b2c,copper:#8d6b6d,emerald green:#629689,midnight purple:#82367e,hot pink:#eab7b4'
+    {%- assign color_mapping = 'passionate plum:#cc8899,carmine:#ff0038,RUSIAN PINK:#ff007f,blue khalifa:#55e2e9,chocolate:#4b3530,blueberry:#6a8bba,raspberry:#ce444d,peach:#9a2924,baby pink:#ffc0cb,lime yellow:#dfff00,white:#fff,pale blue:#bbeaea,classic rose:#ce80bd,blue:#250084,red:#cf2b2c,copper:#8d6b6d,emerald green:#629689,midnight purple:#82367e,hot pink:#eab7b4,Crimson:#ba1538,Violet:#6b267f,Mint Chip:#3bc0ac'
       | split: ','
     -%}
     <style>
