--- a/sections/product-info-fold.liquid
+++ b/sections/product-info-fold.liquid
@@ -108,6 +108,43 @@
             {%- endif -%}
           </p>
         {% endcomment %}
+        {%- if product.metafields.reviews.rating.value != blank -%}
+          <div class="rating-wrapper">
+            {% liquid
+              assign rating_decimal = 0
+              assign decimal = product.metafields.reviews.rating.value.rating | modulo: 1
+              if decimal >= 0.3 and decimal <= 0.7
+                assign rating_decimal = 0.5
+              elsif decimal > 0.7
+                assign rating_decimal = 1
+              endif
+            %}
+            <div
+              class="rating"
+              role="img"
+              aria-label="{{ 'accessibility.star_reviews_info' | t: rating_value: product.metafields.reviews.rating.value, rating_max: product.metafields.reviews.rating.value.scale_max }}"
+            >
+              <span
+                aria-hidden="true"
+                class="rating-star"
+                style="--rating: {{ product.metafields.reviews.rating.value.rating | floor }}; --rating-max: {{ product.metafields.reviews.rating.value.scale_max }}; --rating-decimal: {{ rating_decimal }};"
+              ></span>
+            </div>
+            <p class="rating-text caption">
+              <span aria-hidden="true">
+                {{- product.metafields.reviews.rating.value }} /
+                {{ product.metafields.reviews.rating.value.scale_max -}}
+              </span>
+            </p>
+            <p class="rating-count caption">
+              <span aria-hidden="true">({{ product.metafields.reviews.rating_count }})</span>
+              <span class="visually-hidden">
+                {{- product.metafields.reviews.rating_count }}
+                {{ 'accessibility.total_reviews' | t -}}
+              </span>
+            </p>
+          </div>
+        {%- endif -%}
         <div class="product-info-fold-right-container mobile-usp-right-container">
           <div class="product-info-fold-right-parent">
             {% for usp in product.metafields.content.product_usp.value %}
@@ -406,6 +443,15 @@
         </div>
 
         <style>
+          .rating-wrapper .rating-star::before {
+            background: #ffb800;
+            background-clip: text;
+            font-size: 2.3rem;
+          }
+          .rating-wrapper {
+            margin-top: 10px;
+            margin-bottom: -5px;
+          }
           .pdp-pincode-checker {
             margin: 0;
             width: 100%;
@@ -767,7 +813,7 @@
     display: none;
   }
   .content-slider-strip p {
-    font-size: 1.1rem !important;
+    font-size: 0.9rem !important;
     text-transform: uppercase;
     margin: 0;
   }
@@ -1201,7 +1247,7 @@
       flex-direction: column;
     }
     .product-info-fold-container {
-      padding: 20px 0 0;
+      padding: 5px 0 0;
     }
     .product-info-fold-left-container {
       -webkit-box-ordinal-group: 3;
