--- a/assets/custom.css
+++ b/assets/custom.css
@@ -273,12 +273,15 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .slideshow_media_mobile_image {
     display: none !important;
-    aspect-ratio: 686 / 960 !important;
-    height: auto !important;
+    width: 100vw !important;
+    height: fit-content !important;
 }
 
 .slideshow_media_desktop_image {
     display: flex !important;
+    height: fit-content !important;
+    max-height: fit-content !important;
+    min-height: fit-content !important;
 }
 
 .collection .slider-buttons {
@@ -638,7 +641,13 @@ slideshow-component .slider-counter__link--dots .dot {
 .images-carousel-home {
     height: auto;
     width: 100%;
-    aspect-ratio: 1920 / 820;
+}
+
+.images-carousel-home img {
+    display: flex;
+    max-height: fit-content;
+    height: fit-content;
+    min-height: fit-content;
 }
 
 sticky-header {
@@ -932,9 +941,6 @@ sticky-header {
         text-wrap: nowrap;
     }
 
-    .images-carousel-home {
-        aspect-ratio: 686 / 960;
-    }
 
     .price {
         font-size: 1.4rem !important;
