--- a/sections/home-circle-collections.liquid
+++ b/sections/home-circle-collections.liquid
@@ -5,13 +5,13 @@
       <p>For Him</p>
     </div>
   </a>
-  <a href="/collections/new-launch">
+  <a href="/collections/all">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/New_Launch.png?v=1739361328">
-      <p>New Launch</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/V-Day_Sasle_fedf5df7-82b6-49ee-9bdb-0e7e80797dfb.png?v=174005873">
+      <p>Shop All</p>
     </div>
   </a>
-  <a href="/collections/sale">
+  <a href="/collections/dual-functional">
     <div class="header-category">
       <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/V-Day_Sasle.png?v=1739361328">
       <p>V-day Sale</p>
@@ -19,8 +19,8 @@
   </a>
   <a href="/collections/deals-of-the-day">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/4_7974c1f7-2f89-4dae-b551-9c432879127a.png?v=1739361329">
-      <p>Deals</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/website_circle_section.png?v=1740058999">
+      <p>Hot Deals</p>
     </div>
   </a>
   <a href="/collections/lubes">
