--- a/sections/home-circle-collections.liquid
+++ b/sections/home-circle-collections.liquid
@@ -1,35 +1,29 @@
 <div class="header-categories-container">
-  <a href="/collections/for-him-1">
+  <a href="/collections/under-1999">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/For_Him.png?v=1739361332">
-      <p>For Him</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/website_circle_section_2.png?v=1740052500">
+      <p>Under₹1999</p>
     </div>
   </a>
-  <a href="/collections/new-launch">
+  <a href="/collections/all">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/New_Launch.png?v=1739361328">
-      <p>New Launch</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/V-Day_Sasle_1.png?v=1740059219">
+      <p>Shop All</p>
     </div>
   </a>
-  <a href="/collections/sale">
+  <a href="/collections/dual-functional">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/V-Day_Sasle.png?v=1739361328">
-      <p>V-day Sale</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/website_circle_section_6.png?v=1740055789">
+      <p>Dual Action</p>
     </div>
   </a>
   <a href="/collections/deals-of-the-day">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/4_7974c1f7-2f89-4dae-b551-9c432879127a.png?v=1739361329">
-      <p>Deals</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/6_d323835f-9870-4f54-a3cc-7eef16db2b78.png?v=1740059164">
+      <p>Hot Deals</p>
     </div>
   </a>
-  <a href="/collections/lubes">
-    <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Lubes.png?v=1739361332">
-      <p>Lubricants</p>
-    </div>
-  </a>
-  <a href="/collections/bundles">
+  <a href="/collections/all-bundles">
     <div class="header-category">
       <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Bundles.png?v=1739361334">
       <p>Bundles</p>
